# play-in-mpv

./: .gitignore  default.nix  shell.nix
.github/workflows/: build.yml  sign.yml
extension/: .gitignore  .web-extension-id  background.js  bower.json  content.js  content.js.obsolete  content.obsolete.js  manifest.json  shell.nix
extension/src/: Content.js  Content.purs
launcher/: .gitignore  .stylish-haskell.yaml  Main.hs  com.szczyp.play_in_mpv.json  default.nix  hie.yaml  play-in-mpv.cabal  play_in_mpv.config.yaml  shell.nix  stack.yaml
launcher/app/: Main.hs
launcher/lib/: Preludium.hs
launcher/src/: Main.hs
native/: com.szczyp.play_in_mpv.json  index.js  install.bat  play_in_mpv.bat  uninstall.bat
