name:                play-in-mpv
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Szczyp/play-in-mpv#readme
license:             GPL-3
author:              Szczyp
maintainer:          qb@szczyp.com
copyright:           2016 Szczyp
category:            WebExtension
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  exposed-modules:     Preludium
  build-depends:       base
                     , classy-prelude
                     , lens
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable play_in_mpv
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , play-in-mpv
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , errors
                     , filepath
                     , flow
                     , lens-aeson
                     , mmorph
                     , mtl
                     , pipes
                     , pipes-bytestring
                     , pipes-parse
                     , process
                     , text
                     , transformers
                     , uri-bytestring
                     , yaml
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/Szczyp/play-in-mpv
