cabal-version:       2.4
name:                play-in-mpv
version:             1.4.6.1
synopsis:            Spawns player for links in stdin.
description:         Please see README.md
homepage:            https://github.com/Szczyp/play-in-mpv
license:             GPL-3.0-or-later
author:              Szczyp
maintainer:          qb@szczyp.com
copyright:           2016 Szczyp
category:            WebExtension
build-type:          Simple

library
  hs-source-dirs:      lib
  ghc-options:         -Wall
  exposed-modules:     Preludium
  build-depends:       base
                     , classy-prelude
                     , errors
                     , flow
                     , lens
                     , mmorph
                     , protolude
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable play_in_mpv
  main-is:             Main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , attoparsec
                     , play-in-mpv
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , lens-aeson
                     , mtl
                     , pipes
                     , pipes-bytestring
                     , pipes-parse
                     , process
                     , text
                     , transformers
                     , uri-bytestring
                     , yaml
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/Szczyp/play-in-mpv
